--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,27 @@
 {
   "name": "pyachok",
   "version": "1.0.0",
-  "main": "dist/app.js",
+  "main": "./srs/app.ts",
   "scripts": {
     "start": "rimraf dist && tsc-watch --onSuccess",
-    "watch:server": "nodemon './src/app.ts' --watch './src'"
+    "watch:server": "nodemon ./src/app.ts"
   },
   "author": "Bohdan Tcherniy",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
+    "@types/request": "^2.48.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.3"
-
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.19",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.5.0",
-    "tsc-watch": "^4.6.0",
+    "ts-node": "^10.9.1",
+    "tsc-watch": "^6.0.0",
     "typescript": "^4.9.4"
   }
 }
